# tool_APV

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
apv/: __init__.py  download.py  htmlParser.py  main.py  textParser.py
docs/adr/: ADR_0_download-the-html-of-an-author's-publications.md  ADR_1_save-data-to-csv-file.md  ADR_1_save-data-to-json-file.md
src/: htmlParser.py  main.py
tests/: test_download.py
