[tool.poetry]
name = "apv"
version = "0.0.1"
description = "A utility to get ACM Author publication venues"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/template_python"
repository = "https://github.com/NicholasSynovic/template_python"
keywords = ["acm", "publications"]
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pytest = "^8.3.3"
lxml = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
apv = "apv.main:main"
